--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- fav icon -->
-    <link rel="shortcut icon" href="../icons/favicon32.b64ecc03.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./icons/favicon32.b64ecc03.png" type="image/x-icon">
 
     <!-- Style Sheet  -->
 
-    <link rel="stylesheet" href="../css/base.css">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="./css/base.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
