--- a/index.html
+++ b/index.html
@@ -103,28 +103,28 @@
 
                 <div class="cards-container">
                     <div class="card">
-                        <img src="../images/horror time.jpg" alt="">
+                        <img src="./images/horror time.jpg" alt="">
                         <h4>Horror Time</h4>
                         <p>Horror Time </p>
                     </div>
                     <div class="card">
-                        <img src="../images/bollywood butter.jpg" alt="">
+                        <img src="./images/bollywood butter.jpg" alt="">
                         <h4>Bollywood Butter</h4>
                         <p>B bole toh biggest blockbusters, right here! Koi Shaq? 😎 Cover - Rocky Aur Rani Kii Prem
                             Kahaani</p>
                     </div>
                     <div class="card">
-                        <img src="../images/Bajirao.jpg" alt="">
+                        <img src="./images/Bajirao.jpg" alt="">
                         <h4>Bajirao Mastani</h4>
                         <p>2015 • Various Artists</p>
                     </div>
                     <div class="card">
-                        <img src="../images/agneepath.jpg" alt="">
+                        <img src="./images/agneepath.jpg" alt="">
                         <h4>Agneepath</h4>
                         <p>2011 • Ajay-Atul</p>
                     </div>
                     <div class="card">
-                        <img src="../images/Deewarein.jpg" alt="">
+                        <img src="./images/Deewarein.jpg" alt="">
                         <h4>Deewarein</h4>
                         <p>2023 • Manan Bhardwaj, Arijit Singh </p>
                     </div>
@@ -141,28 +141,28 @@
 
                 <div class="cards-container">
                     <div class="card">
-                        <img src="../images/horror time.jpg" alt="">
+                        <img src="./images/horror time.jpg" alt="">
                         <h4>Horror Time</h4>
                         <p>Horror Time </p>
                     </div>
                     <div class="card">
-                        <img src="../images/bollywood butter.jpg" alt="">
+                        <img src="./images/bollywood butter.jpg" alt="">
                         <h4>Bollywood Butter</h4>
                         <p>B bole toh biggest blockbusters, right here! Koi Shaq? 😎 Cover - Rocky Aur Rani Kii Prem
                             Kahaani</p>
                     </div>
                     <div class="card">
-                        <img src="../images/Bajirao.jpg" alt="">
+                        <img src="./images/Bajirao.jpg" alt="">
                         <h4>Bajirao Mastani</h4>
                         <p>2015 • Various Artists</p>
                     </div>
                     <div class="card">
-                        <img src="../images/agneepath.jpg" alt="">
+                        <img src="./images/agneepath.jpg" alt="">
                         <h4>Agneepath</h4>
                         <p>2011 • Ajay-Atul</p>
                     </div>
                     <div class="card">
-                        <img src="../images/Deewarein.jpg" alt="">
+                        <img src="./images/Deewarein.jpg" alt="">
                         <h4>Deewarein</h4>
                         <p>2023 • Manan Bhardwaj, Arijit Singh </p>
                     </div>
@@ -177,28 +177,28 @@
 
                 <div class="cards-container">
                     <div class="card">
-                        <img src="../images/horror time.jpg" alt="">
+                        <img src="./images/horror time.jpg" alt="">
                         <h4>Horror Time</h4>
                         <p>Horror Time </p>
                     </div>
                     <div class="card">
-                        <img src="../images/bollywood butter.jpg" alt="">
+                        <img src="./images/bollywood butter.jpg" alt="">
                         <h4>Bollywood Butter</h4>
                         <p>B bole toh biggest blockbusters, right here! Koi Shaq? 😎 Cover - Rocky Aur Rani Kii Prem
                             Kahaani</p>
                     </div>
                     <div class="card">
-                        <img src="../images/Bajirao.jpg" alt="">
+                        <img src="./images/Bajirao.jpg" alt="">
                         <h4>Bajirao Mastani</h4>
                         <p>2015 • Various Artists</p>
                     </div>
                     <div class="card">
-                        <img src="../images/agneepath.jpg" alt="">
+                        <img src="./images/agneepath.jpg" alt="">
                         <h4>Agneepath</h4>
                         <p>2011 • Ajay-Atul</p>
                     </div>
                     <div class="card">
-                        <img src="../images/Deewarein.jpg" alt="">
+                        <img src="./images/Deewarein.jpg" alt="">
                         <h4>Deewarein</h4>
                         <p>2023 • Manan Bhardwaj, Arijit Singh </p>
                     </div>
@@ -213,28 +213,28 @@
 
                 <div class="cards-container">
                     <div class="card">
-                        <img src="../images/horror time.jpg" alt="">
+                        <img src="./images/horror time.jpg" alt="">
                         <h4>Horror Time</h4>
                         <p>Horror Time </p>
                     </div>
                     <div class="card">
-                        <img src="../images/bollywood butter.jpg" alt="">
+                        <img src="./images/bollywood butter.jpg" alt="">
                         <h4>Bollywood Butter</h4>
                         <p>B bole toh biggest blockbusters, right here! Koi Shaq? 😎 Cover - Rocky Aur Rani Kii Prem
                             Kahaani</p>
                     </div>
                     <div class="card">
-                        <img src="../images/Bajirao.jpg" alt="">
+                        <img src="./images/Bajirao.jpg" alt="">
                         <h4>Bajirao Mastani</h4>
                         <p>2015 • Various Artists</p>
                     </div>
                     <div class="card">
-                        <img src="../images/agneepath.jpg" alt="">
+                        <img src="./images/agneepath.jpg" alt="">
                         <h4>Agneepath</h4>
                         <p>2011 • Ajay-Atul</p>
                     </div>
                     <div class="card">
-                        <img src="../images/Deewarein.jpg" alt="">
+                        <img src="./images/Deewarein.jpg" alt="">
                         <h4>Deewarein</h4>
                         <p>2023 • Manan Bhardwaj, Arijit Singh </p>
                     </div>
@@ -249,28 +249,28 @@
 
                 <div class="cards-container">
                     <div class="card">
-                        <img src="../images/horror time.jpg" alt="">
+                        <img src="./images/horror time.jpg" alt="">
                         <h4>Horror Time</h4>
                         <p>Horror Time </p>
                     </div>
                     <div class="card">
-                        <img src="../images/bollywood butter.jpg" alt="">
+                        <img src="./images/bollywood butter.jpg" alt="">
                         <h4>Bollywood Butter</h4>
                         <p>B bole toh biggest blockbusters, right here! Koi Shaq? 😎 Cover - Rocky Aur Rani Kii Prem
                             Kahaani</p>
                     </div>
                     <div class="card">
-                        <img src="../images/Bajirao.jpg" alt="">
+                        <img src="./images/Bajirao.jpg" alt="">
                         <h4>Bajirao Mastani</h4>
                         <p>2015 • Various Artists</p>
                     </div>
                     <div class="card">
-                        <img src="../images/agneepath.jpg" alt="">
+                        <img src="./images/agneepath.jpg" alt="">
                         <h4>Agneepath</h4>
                         <p>2011 • Ajay-Atul</p>
                     </div>
                     <div class="card">
-                        <img src="../images/Deewarein.jpg" alt="">
+                        <img src="./images/Deewarein.jpg" alt="">
                         <h4>Deewarein</h4>
                         <p>2023 • Manan Bhardwaj, Arijit Singh </p>
                     </div>
@@ -285,28 +285,28 @@
 
                 <div class="cards-container">
                     <div class="card">
-                        <img src="../images/horror time.jpg" alt="">
+                        <img src="./images/horror time.jpg" alt="">
                         <h4>Horror Time</h4>
                         <p>Horror Time </p>
                     </div>
                     <div class="card">
-                        <img src="../images/bollywood butter.jpg" alt="">
+                        <img src="./images/bollywood butter.jpg" alt="">
                         <h4>Bollywood Butter</h4>
                         <p>B bole toh biggest blockbusters, right here! Koi Shaq? 😎 Cover - Rocky Aur Rani Kii Prem
                             Kahaani</p>
                     </div>
                     <div class="card">
-                        <img src="../images/Bajirao.jpg" alt="">
+                        <img src="./images/Bajirao.jpg" alt="">
                         <h4>Bajirao Mastani</h4>
                         <p>2015 • Various Artists</p>
                     </div>
                     <div class="card">
-                        <img src="../images/agneepath.jpg" alt="">
+                        <img src="./images/agneepath.jpg" alt="">
                         <h4>Agneepath</h4>
                         <p>2011 • Ajay-Atul</p>
                     </div>
                     <div class="card">
-                        <img src="../images/Deewarein.jpg" alt="">
+                        <img src="./images/Deewarein.jpg" alt="">
                         <h4>Deewarein</h4>
                         <p>2023 • Manan Bhardwaj, Arijit Singh </p>
                     </div>
@@ -321,28 +321,28 @@
 
                 <div class="cards-container">
                     <div class="card">
-                        <img src="../images/horror time.jpg" alt="">
+                        <img src="./images/horror time.jpg" alt="">
                         <h4>Horror Time</h4>
                         <p>Horror Time </p>
                     </div>
                     <div class="card">
-                        <img src="../images/bollywood butter.jpg" alt="">
+                        <img src="./images/bollywood butter.jpg" alt="">
                         <h4>Bollywood Butter</h4>
                         <p>B bole toh biggest blockbusters, right here! Koi Shaq? 😎 Cover - Rocky Aur Rani Kii Prem
                             Kahaani</p>
                     </div>
                     <div class="card">
-                        <img src="../images/Bajirao.jpg" alt="">
+                        <img src="./images/Bajirao.jpg" alt="">
                         <h4>Bajirao Mastani</h4>
                         <p>2015 • Various Artists</p>
                     </div>
                     <div class="card">
-                        <img src="../images/agneepath.jpg" alt="">
+                        <img src="./images/agneepath.jpg" alt="">
                         <h4>Agneepath</h4>
                         <p>2011 • Ajay-Atul</p>
                     </div>
                     <div class="card">
-                        <img src="../images/Deewarein.jpg" alt="">
+                        <img src="./images/Deewarein.jpg" alt="">
                         <h4>Deewarein</h4>
                         <p>2023 • Manan Bhardwaj, Arijit Singh </p>
                     </div>
